[Sprint 12] Реализовать ТЗ из ФЗ 12]